[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = "This isn't the first, and it won't be the last. But it's myn, and therefore that makes it the greatest."
authors = ["Carlos Rincon"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^2.7"
dotbot = "^1.14"

[tool.poetry.dev-dependencies]
invoke = "^1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
